# NeuChain

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  cleanup-cleanline-default.sh  install_deps.sh
doc/: 4_servers_example.yaml  config_template_4_servers.yaml  config_template_local.yaml  init_crypto.yaml  install.sh
include/block_server/: server.h
include/block_server/comm/: comm.h
include/block_server/comm/client_proxy/: client_proxy.h  comm_controller.h  consensus_control_block.h  epoch_transaction_buffer.h  epoch_txn_queue_manager.h  user_collector.h
include/block_server/comm/mock/: comm_stub.h  mock_comm.h
include/block_server/comm/query/: query_controller.h  tx_execution_receiver.h
include/block_server/coordinator/: aggregation_broadcaster.h  aggregation_coordinator.h  aria_coordinator.h  coordinator.h  workload_size_adapter.h
include/block_server/database/: block_broadcaster.h  block_generator.h  block_info_helper.h  block_storage.h  database.h  db_connection.h  db_storage.h
include/block_server/database/impl/: block_generator_impl.h  block_storage_to_db.h  block_storage_to_file.h  database_impl.h  db_storage_impl.h  hash_map_storage.h  level_db_storage.h
include/block_server/database/orm/: cc_orm_helper.h  insert.h  query.h  table_definition.h
include/block_server/database/orm/fields/: char_field.hpp  (+2 more)
include/block_server/reserve_table/: reserve_table.h  trasnaction_dependency.h
include/block_server/reserve_table/mock/: mock_mvcc_reserve_table.h  mock_reserve_table.h
include/block_server/transaction/: transaction.h  transaction_manager.h
include/block_server/transaction/impl/: transaction_manager_impl.h
include/block_server/transaction/mock/: mock_transaction.h
include/block_server/worker/: aggregation_worker.h  aria_worker.h  chaincode_manager.h  chaincode_stub_interface.h  transaction_executor.h  worker.h  worker_instance.h
include/block_server/worker/chaincode/: orm_test_chaincode.h  small_bank_chaincode.h  ycsb_chaincode.h
include/block_server/worker/impl/: aggregation_transaction_executor.h  chaincode_object.h  transaction_executor_impl.h  transaction_query_executor.h
include/common/: aria_types.h  compile_config.h  consume_time_calculator.h  cv_wrapper.h  cyclic_barrier.h  fnv_hash.h  hash_map.h  lru_cache.hpp  mvcc_hash_map.h  random.h  random_generator.h  sha224_256.h  sha256_hepler.h  spin_lock.h  thread_pool.h  timer.h  yaml_config.h
include/common/concurrent_queue/: blocking_concurrent_queue.hpp  blocking_mpmc_queue.h  concurrent_queue.hpp  light_weight_semaphore.hpp  mpmc_queue.h
include/common/msp/: crypto_encrypt.h  crypto_helper.h  crypto_sign.h
include/common/payload/: mock_utils.h  ycsb_payload.h
include/common/zmq/: zmq_client.h  zmq_server.h  zmq_server_listener.h
include/epoch_server/: eov_consensus_manager.h  epoch_server.h  ev_consensus_manager.h  oe_consensus_manager.h
include/epoch_server/raft/: chain.h  chain_client.h  chain_closure.h  consensus_manager.h
include/proto/: block.proto  chain.proto  chaincode.proto  comm.proto  db_test_chaincode.proto  eov.proto  kv_rwset.proto  oe.proto  tpc-c.proto  transaction.proto
include/user/block_bench/: aria_custom_db.h  aria_small_bank_db.h  aria_ycsb_db.h  custom_db.h  db_user_base.h  executed_transaction_receiver.h  small_bank_db.h  ycsb_db.h  ycsb_workload.h
src/block_server/: CMakeLists.txt  server.cpp
src/block_server/comm/client_proxy/: client_proxy.cpp  comm_controller.cpp  consensus_control_block.cpp  user_collector.cpp
src/block_server/comm/mock/: comm_stub.cpp  mock_comm.cpp
src/block_server/comm/query/: query_controller.cpp  tx_execution_receiver.cpp
src/block_server/coordinator/: aggregation_broadcaster.cpp  aggregation_coordinator.cpp  aria_coordinator.cpp
src/block_server/database/: block_broadcaster.cpp  block_generator.cpp  database.cpp  db_connection.cpp
src/block_server/database/impl/: block_generator_impl.cpp  block_storage_to_db.cpp  block_storage_to_file.cpp  database_impl.cpp  db_storage_impl.cpp  hash_map_storage.cpp  level_db_storage.cpp
src/block_server/database/orm/: cc_orm_helper.cpp
src/block_server/database/orm/impl/: insert_impl.cpp  level_db_results_iterator.cpp  query_impl.cpp  results_iterator_impl.cpp
src/block_server/reserve_table/: reserve_table.cpp
src/block_server/reserve_table/mock/: mock_mvcc_reserve_table.cpp  mock_reserve_table.cpp
src/block_server/transaction/impl/: transaction_manager_impl.cpp
src/block_server/transaction/mock/: mock_transaction.cpp
src/block_server/worker/: aggregation_worker.cpp  aria_worker.cpp  chaincode_manager.cpp  transaction_executor.cpp  worker.cpp
src/block_server/worker/chaincode/: orm_test_chaincode.cpp  small_bank_chaincode.cpp  ycsb_chaincode.cpp
src/block_server/worker/impl/: aggregation_transaction_executor.cpp  chaincode_object.cpp  transaction_executor_impl.cpp  transaction_query_executor.cpp
src/common/: base64.cpp  cyclic_barrier.cpp  sha224_256.c  yaml_config.cpp
src/common/merkle_tree/: merkle_tree.c  mt_arr_list.c  mt_crypto.c
src/common/msp/: crypto_encrypt.cpp  crypto_helper.cpp  crypto_sign.cpp
src/common/payload/: mock_utils.cpp  ycsb_payload.cpp
src/common/zmq/: zmq_client.cpp  zmq_server.cpp  zmq_server_listener.cpp
src/epoch_server/: CMakeLists.txt  eov_consensus_manager.cpp  epoch_server.cpp  ev_consensus_manager.cpp  oe_consensus_manager.cpp
src/epoch_server/raft/: chain.cpp  chain_client.cpp  chain_closure.cpp
src/user/: CMakeLists.txt  user.cpp
src/user/block_bench/: aria_custom_db.cpp  aria_small_bank_db.cpp  aria_ycsb_db.cpp  custom_db.cpp  db_user_base.cpp  small_bank_db.cpp  ycsb_db.cpp  ycsb_workload.cpp
tests/: CMakeLists.txt
tests/block_server/database/block_storage/: CMakeLists.txt  block_server_test.cpp  block_server_test.h  level_db_storage_test.cpp  level_db_storage_test.h
tests/block_server/reserve_table/: CMakeLists.txt  mvcc_reserve_table_test.cpp  mvcc_reserve_table_test.h  reserve_table_impl_test.cpp  reserve_table_impl_test.h  reserve_table_provider_test.cpp  reserve_table_provider_test.h
(+5 files in other folders)
