CMAKE_MINIMUM_REQUIRED(VERSION 3.6 FATAL_ERROR)
ENABLE_TESTING()
ADD_SUBDIRECTORY(block_server/reserve_table)
ADD_SUBDIRECTORY(block_server/database/block_storage)

ADD_LIBRARY(lib_block_server STATIC
        ${SRC_COMMON_DATA_STRUCTURE}
        ${SRC_COMMON_MERKLE_TREE}
        ${SRC_COMMON_MSP}
        ${SRC_COMMON_TX_PAYLOAD}
        ${SRC_COMMON_ZMQ}
        ${SRC_CLIENT_PROXY}
        ${SRC_QUERY}
        ${SRC_BLOCK_SERVER_COORDINATOR}
        ${SRC_BLOCK_SERVER_WORKER}
        ${SRC_BLOCK_SERVER_DATABASE}
        ${SRC_BLOCK_SERVER_TRANSACTION}
        ${SRC_BLOCK_SERVER_RESERVE_TABLE})